--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "CollingMedia/MaketoAPI",
+    "name": "collingmedia/marketo-assets-api",
     "description": "",
     "keywords": [
         "swagger",
